part1-docker-k8s/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops
  labels:
    name: devsecops
    purpose: evaluation
    security.policy: restricted
