part1-docker-k8s/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multilang-dev-service
  namespace: devsecops
  labels:
    app: multilang-dev-env
    component: development-environment
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/metrics"
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
    nodePort: 30080
  selector:
    app: multilang-dev-env
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
